--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,8 @@ h1, h2, h3, h4, h5, h6 {
 
 @media (max-width: 768px) {
 	.inlineAlt {
-	max-width:200px;
+	max-width:350px;
+	margin: 5px 0 12px 0;
 	}
 }
 
@@ -601,6 +602,13 @@ body.mobile-nav-active #mobile-nav-toggle {
 	margin-bottom: 35px;
 }
 
+.beerList img {
+	float: left;
+	padding-right: 8px;
+}
+.beerDescription {
+	clear:both;
+}
 /* Events Section
 --------------------------------*/
 #events {
