--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,9 @@ h1, h2, h3, h4, h5, h6 {
   padding: 0;
   text-shadow: 1px 1px black;
 }
+h4 {
+  font-size: 26px;
+}
 
 /* Prelaoder */
 #preloader {
