--- a/css/style.css
+++ b/css/style.css
@@ -83,6 +83,10 @@ h4 {
   }
 }
 
+@media (max-width:1024px){
+  .inlineAlt {
+    max-width: 320px;
+}
 @media (max-width: 768px) {
 	.inlineAlt {
 	max-width:100%;
@@ -223,6 +227,11 @@ h4 {
   max-height: 50px;
 }
 
+@media (max-width:1024px){
+    #header #logo img {
+    max-height: 22px;
+  }
+}
 @media (max-width: 768px) {
   #header {
     height: 80px;
