--- a/css/style.css
+++ b/css/style.css
@@ -810,3 +810,34 @@ Egg time!
 #Bird4 {
   left:1100px;
 }
+#Dialog {
+  display: none;
+}
+#OhNoes {
+  padding-top: 10px;
+}
+.fired {
+  color: red;
+  font-weight: bold;
+  font-size: 1.5em;
+}
+.you {
+  color: darkorange;
+  font-weight: bold;
+  font-size: 1.5em;
+}
+.fireHim {
+  opacity: 0.5;
+}
+#FireThem {
+  display: flex;
+  justify-content: space-evenly;
+}
+.fireChoice {
+  color: red;
+  font-weight: bold;
+  font-size: 24px;
+  margin-top: 40px;
+  text-shadow: 1px 1px black;
+  visibility: hidden;
+}
